feat: swagger @Router api/v1/auth  [all]
